# aoc-template-hs

./: aoc-template-hs.cabal
app/: Main.hs
solutions/: Day01.hs
