cabal-version:      3.0
name:               aoc-template-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
author:             Maciej Jur
maintainer:         maciej@kamoshi.org
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:
        Advent
        Day01

    -- other-modules:
    -- other-extensions:

    build-depends:
      base ^>=4.20.0.0,
      text ^>=2.1,

    hs-source-dirs:   solutions
    default-language: Haskell2010

executable aoc-template-hs
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:

    build-depends:
      base ^>=4.20.0.0,
      text ^>=2.1,
      aoc-template-hs

    hs-source-dirs:   app
    default-language: Haskell2010
